feature: Added user field in Quiz